app/assets/stylesheets/pages/_home.scss
// General site config
html,
body,
.overflow-wrap {
  max-width: 100%;
  overflow-x: hidden;
  // position: absolute;
}

.main-site-container {
  max-width: 1400px;
  margin: 0 auto;
}

// Landing section

.landing-section {
  padding-top: 80px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  // height: calc(80vh - 85px)
}

.social-media-icons-landing {
  margin: auto 0;
}

svg {
  transition: 0.2s;
}

svg:hover {
  fill: $primary-color-hover;
  transition: 0.2s;
}

.social-media-icons {
  padding: 0;
  display: grid;
  grid-template-rows: 60px 60px 60px;
}

.social-media-icon {
  border: none;
  background: none;
  display: block;
  text-align: left;
}

.landing-primary-section {
  max-width: 500px;
  background-image: url("https://res.cloudinary.com/dfyhqslry/image/upload/v1673690983/code%20web/Code_image_oc1ata.svg");
  background-size: 500px;
  width: 500px;
  background-position-y: 65px;
  background-repeat: no-repeat;
}

.button-link {
  height: fit-content;
}

.landing-code-image {
  z-index: 1;
  left: -40px;
  top: -10px;
  width: 600px;
  position: absolute;
}

.landing-secondary-header {
  max-width: 500px;
  padding: 30px 0 40px 0;
}

.landing-secondary-section {
  padding-top: 50px;
  max-width: 600px;

  img {
    min-width: 100%;
    max-width: 100%;
  }
}

// Fonts

h1 {
  font-size: 52px;
  font-family: $headers-font;
  font-weight: 800;
  color: $primary-text;
}

h2 {
  font-size: 34px;
  font-family: $headers-font;
  font-weight: 800;
  color: $primary-text;
}

h3 {
  font-size: 30px;
  font-family: $headers-font;
  font-weight: 600;
  color: $primary-text;
}

h4 {
  font-size: 26px;
  font-family: $headers-font;
  font-weight: 600;
  color: $primary-text;
}

h5 {
  font-size: 16px;
  font-family: $headers-font;
  font-weight: 800;
  color: $primary-text;
}

h6 {
  font-size: 20px;
  font-family: $headers-font;
  font-weight: 500;
  color: darkgray;
}
.text-align-center {
  text-align: center;
}

// Services section

.services-section {
  margin-top: 100px;
  padding-top: 100px;
  height: 100vh;
  background-color: #efeff8;
  background-size: 100%;
}

.services-list {
  padding-left: 0;
  display: flex;
  justify-content: space-between;
  width: 520px;
  margin: 80px auto 40px auto;
}

.services-list {
  li {
    cursor: pointer;
  }
}

.services-render {
  display: flex;
  justify-content: space-between;
  max-width: 1000px;
  margin: 80px auto;
}

.services-description {
  width: 42%;
  a {
    text-decoration: none;
  }
}

.services-description-header {
  padding: 20px 0px;
}

.services-image {
  width: 42%;
  img {
    width: 100%;
  }
}

.services-list_selected {
  color: $primary-color;
  text-decoration: underline $primary-color;
  text-underline-offset: 12px;
}

.services-description_indicator {
  color: $primary-color;
}

.services-description_link {
  color: $primary-color;
  padding-top: 20px;
}

@media only screen and (max-width: 1480px) {
  .main-site-container {
    max-width: 1300px;
  }

  .landing-primary-section {
    max-width: 450px;
    background-size: 450px;
  }

  h1 {
    font-size: 48px;
    font-family: $headers-font;
    font-weight: 800;
    color: $primary-text;
  }

  h2 {
    font-size: 32px;
    font-family: $headers-font;
    font-weight: 800;
    color: $primary-text;
  }

  h4 {
    font-size: 24px;
    font-family: $headers-font;
    font-weight: 600;
    color: $primary-text;
  }
}

@media only screen and (max-width: 1400px) {
  .main-site-container {
    max-width: 1250px;
  }

  .landing-secondary-section {
    padding-top: 50px;
    max-width: 600px;
  }

  .landing-primary-section {
    max-width: 425px;
    background-size: 425px;
  }

  h1 {
    font-size: 44px;
    font-family: $headers-font;
    font-weight: 800;
    color: $primary-text;
  }

  h2 {
    font-size: 30px;
    font-family: $headers-font;
    font-weight: 800;
    color: $primary-text;
  }

  h4 {
    font-size: 22px;
    font-family: $headers-font;
    font-weight: 600;
    color: $primary-text;
  }
}

@media only screen and (max-width: 1300px) {
  .main-site-container {
    max-width: 1150px;
  }

  .landing-primary-section {
    max-width: 400px;
    background-size: 400px;
  }

  .landing-secondary-section {
    padding-top: 50px;
    max-width: 550px;
  }

  h1 {
    font-size: 42px;
    font-family: $headers-font;
    font-weight: 800;
    color: $primary-text;
  }

  h2 {
    font-size: 28px;
    font-family: $headers-font;
    font-weight: 800;
    color: $primary-text;
  }

  h4 {
    font-size: 20px;
    font-family: $headers-font;
    font-weight: 600;
    color: $primary-text;
  }
}

@media only screen and (max-width: 1250px) {
  .main-site-container {
    max-width: 1100px;
  }
  .landing-secondary-section {
    padding-top: 50px;
    max-width: 500px;
  }
}

@media only screen and (max-width: 1140px) {
  .main-site-container {
    max-width: 1020px;
  }

  .landing-primary-section {
    max-width: 380px;
    background-size: 380px;
  }

  h1 {
    font-size: 40px;
    font-family: $headers-font;
    font-weight: 800;
    color: $primary-text;
  }

  h2 {
    font-size: 26px;
    font-family: $headers-font;
    font-weight: 800;
    color: $primary-text;
  }

  h4 {
    font-size: 20px;
    font-family: $headers-font;
    font-weight: 600;
    color: $primary-text;
  }
}

@media only screen and (max-width: 1060px) {
  .main-site-container {
    max-width: 1000px;
  }
}

@media only screen and (max-width: 1030px) {
  .main-site-container {
    max-width: 980px;
  }
}

@media only screen and (max-width: 1010px) {
  .main-site-container {
    max-width: 920px;
  }

  .landing-primary-section {
    max-width: 350px;
    background-size: 350px;
  }

  .landing-secondary-section {
    width: 450px;

    img {
      min-width: 100%;
      max-width: 100%;
    }
  }

  h1 {
    font-size: 38px;
  }

  h2 {
    font-size: 26px;
  }

  h4 {
    font-size: 20px;
  }
}

@media only screen and (max-width: 960px) {
  .main-site-container {
    max-width: none;
    padding: 0 40px;
  }

  .landing-secondary-section {
    width: 400px;
  }

  .social-media-icons-landing {
    display: none;
  }
}

@media only screen and (max-width: 900px) {
  .landing-section {
    flex-direction: column;
  }

  .landing-primary-section {
    margin: 0 auto;
  }

  .landing-secondary-section {
    margin: 0 auto;
  }

  .services-section {
    margin-top: 60px;
    padding-top: 60px;
  }
}

@media only screen and (max-width: 600px) {
  .landing-section {
    padding-top: 40px;
    // height: calc(100vh - 85px)
  }

  .landing-secondary-section {
    display: none;
  }
}

@media only screen and (max-width: 524px) {
  .main-site-container {
    padding: 0 20px;
  }
}

@media only screen and (max-width: 448px) {
  .landing-primary-section {
    max-width: 340px;
    background-size: 340px;
  }

  .landing-secondary-section {
    width: 340px;
  }

  h1 {
    font-size: 40px;
  }

  h2 {
    font-size: 24px;
  }

  h4 {
    font-size: 18px;
  }
}

@media only screen and (max-width: 380px) {
  .landing-primary-section {
    max-width: 320px;
    background-size: 320px;
  }

  .landing-secondary-section {
    width: 320px;
  }

  h1 {
    font-size: 40px;
  }
}

@media only screen and (max-width: 360px) {
  .landing-primary-section {
    max-width: 300px;
    background-size: 300px;
  }

  .landing-secondary-section {
    width: 300px;
  }

  h1 {
    font-size: 36px;
  }
}

@media only screen and (max-width: 340px) {
  .landing-primary-section {
    max-width: 280px;
    background-size: 280px;
  }

  .landing-secondary-section {
    width: 280px;
  }

  h1 {
    font-size: 32px;
  }
}

